--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Proskomma/proskomma-render-perf#readme",
   "dependencies": {
     "@babel/core": "^7.17.10",
+    "ajv": "^8.11.0",
     "proskomma-render": "^0.6.0",
     "proskomma-render-json": "0.0.5"
   },
