--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "proskomma-render-perf",
   "version": "0.0.1",
   "description": "A Proskomma renderer to produce Proskomma Editor-Ready Format JSON (PERF)",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "bash -c \"babel-tape-runner test/code/*.cjs | node_modules/tap-summary/bin/cmd.js\"",
     "rawTest": "babel-tape-runner test/code/*.cjs",
     "oneTest": "babel-tape-runner test/code/$TESTSCRIPT.cjs",
-    "coverage": "node_modules/nyc/bin/nyc.js babel-tape-runner test/code/*.cjs"
+    "coverage": "node_modules/nyc/bin/nyc.js babel-tape-runner test/code/*.cjs",
+    "build": "babel src -d dist",
+    "prepublishOnly": "rm -fr dist && npm run build"
   },
   "repository": {
     "type": "git",
