--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "dependencies": {
     "@babel/core": "^7.17.10",
     "ajv": "^8.11.0",
-    "proskomma-render": "^0.6.0",
-    "proskomma-render-json": "0.0.7"
+    "proskomma-json-tools": "0.0.8",
+    "proskomma-render": "^0.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.10",
